2002-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/Makefile.am: New.
	* rtems/.cvsignore: New.
	* rtems/score/Makefile.am: New.
	* rtems/score/.cvsignore: New.
	* rtems/score/ppc.h: Relocated from shared/.
	* rtems/score/ppctypes.h: Relocated from shared/.
	* asm.h: Relocated from shared/.
	* shared/Makefile.am: Removed.
	* shared/asm.h: Removed.
	* shared/ppc.h: Removed.
	* shared/ppctypes.h: Removed.
	* shared/.cvsignore: Removed.
	* Makefile.am: Reflect changes above.
	* configure.ac: Reflect changes above.

2001-11-28	Joel Sherrill <joel@OARcorp.com>,

	This was tracked as PR91.
	* rtems/score/cpu.h: Added CPU_PROVIDES_ISR_IS_IN_PROGRESS macro which
	is used to specify if the port uses the standard macro for this (FALSE).
	A TRUE setting indicates the port provides its own implementation.

2001-11-14	Joel Sherrill <joel@OARcorp.com>

	* shared/ppc.h: The mpc8260 uses the new exception processing model 
	and thus does not need to define PPC_USE_SPRG.

2001-11-14	Andrew Dachs <A.Dachs@SSTL.co.uk>

	* shared/ppc.h: mpc8260 has double FPU not single FPU.

2001-11-08	Dennis Ehlin (ECS) <Dennis.Ehlin@ecs.ericsson.se>

	This modification is part of the submitted modifications necessary to
	support the IBM PPC405 family.  This submission was reviewed by
	Thomas Doerfler <Thomas.Doerfler@imd-systems.de> who ensured it did
	not negatively impact the ppc403 BSPs.  The submission and tracking
	process was captured as PR50.
	* shared/asm.h, shared/ppc.h: Added PPC405 support.

2001-10-22	Andy Dachs <a.dachs@sstl.co.uk>

	* shared/ppc.h: Added mpc8260 support.

2001-10-12	Joel Sherrill <joel@OARcorp.com>

	* shared/ppctypes.h: Fixed typo.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* shared/Makefile.am: Use 'PREINSTALL_FILES ='.
