@@ -4,7 +4,7 @@
 
 AC_PREREQ(2.52)
 AC_INIT
-AC_CONFIG_SRCDIR([shared])
+AC_CONFIG_SRCDIR([asm.h])
 RTEMS_TOP(../../../../../..)
 AC_CONFIG_AUX_DIR(../../../../../..)
 
@@ -26,7 +26,5 @@ RTEMS_CANONICALIZE_TOOLS
 RTEMS_CHECK_NEWLIB
 
 # Explicitly list all Makefiles here
-AC_CONFIG_FILES([Makefile
-rtems/Makefile
-rtems/score/Makefile])
+AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
