@@ -1,3 +1,10 @@
+2002-01-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* rtems/Makefile.am: Removed.
+	* rtems/score/Makefile.am: Removed.
+	* configure.ac: Reflect changes above.
+	AC_CONFIG_SRCDIR(asm.h).
+
 2002-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* rtems/Makefile.am: New.
